--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-p5-wrapper": "^3.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.1",
     "react-typist": "^2.0.5",
     "rsuite": "^4.8.2",
@@ -29,7 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -b master -d build -t ${GH_TOKEN}"
   },
   "eslintConfig": {
     "extends": "react-app"
