--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
     "gh-pages": "^3.1.0",
     "prettier": "^2.2.1"
   },
-  "homepage": "https://mozkagit.github.io/Gazi/"
+  "homepage": "https://mozka.dev"
 }
